--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
         "framework"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://laravelsatis.com"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
@@ -21,7 +27,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "laravel/nova": "^5.2.2"
     },
     "autoload": {
         "psr-4": {
